<resources>
    <string name="app_name">PlantDex</string>

    <string name="app_description1">PlantDex is the application that was developed as a proof of concept for the study of the research group of Gerarld Merales,
        Zoe Pasiliao, and Michael Zamoras. The main highlight is the Classifier section of this application, with this application, anyone can take a photo of a plant
        and it will be automatically classified by the image classifier module that is being hosted on the same server as the app. Do note that the accuracy of the classification
        would be highly dependent on the quality of the image as well as the datasets that were used to train the module.</string>

    <string name="app_description2">A few reminders when using this app. The application would require GPS Location, Camera, and Storage Permissions to run properly. These
        permissions are required for the Mapping and Classifying Module to work. Also, when classifying an image make sure the image is well-focused on the plant\'s leaf and
        for best results please take or provide a picture with decent lighting and quality.</string>

    <!-- navigation drawer -->
    <string name="label_features">Features</string>
    <string name="label_cap_classify">Capture &amp; Classify</string>
    <string name="label_search">Search</string>
    <string name="label_contribute">Contribute</string>

    <string name="label_account_details">Account Details</string>
    <string name="label_profile">Profile</string>
    <string name="label_login">Login</string>
    <string name="label_logout">Logout</string>

    <string name="label_support">Customer Support</string>
    <string name="label_report">Report Issue</string>
    <string name="label_rate">Rate App</string>

    <string name="nav_drawer_open">open navigation drawer</string>
    <string name="nav_drawer_close">close navigation drawer</string>


    <!-- Login -->
    <string name="label_username">Username</string>
    <string name="label_password">Password</string>

    <string name="hint_username">Enter Username...</string>
    <string name="hint_password">Enter Password...</string>

    <string name="action_login">Login</string>
    <string name="label_action_register">Don\'t have an account?</string>
    <string name="label_action">Sign Up!</string>

    <!-- Search -->
    <string name="label_search_prompt">Please click the search button to search</string>

    <!-- Plant Details -->
    <string name="label_plant_details">Plant Details</string>
    <string name="label_hotspots">Plant Hotspots</string>

    <string name="lorem_ipsum">
        PlantDex is a Lorem ipsum dolor sit amet, consecte
        tur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqu
        a. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
        ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fug
        iat nulla pariatur. Excepteur sint occaecat cupidatat non proident, s
        unt in culpa qui officia deserunt mollit anim id est laborum.
    </string>

    <string name="lorem_ipsum_rate">
        Are we helpful?
Kindly rate the PlantDex application. (1-Needs Improvement to 5-Very Good)
    </string>

    <string name="lorem_ipsum_rate2">
    PlantDex is a mobile application that uses a server hosted image classifier in identifying plant species using images from a user. With that, the group would really
    appreciate feedbacks from you, our dear users to improve our services. Kindly write down your feedback below. Thank you!
    </string>

    <!-- Contribution Form -->
    <string name="label_scientific_name">Scientific Name</string>
    <string name="label_common_name">Common Name</string>
    <string name="label_remarks">Remarks</string>

    <string name="hint_scientific_name">Enter Scientific Name...</string>
    <string name="hint_common_name">Enter Common Name...</string>
    <string name="hint_remarks">Enter Remarks...</string>

    <string name="label_contribute_success_desc1">You have successfully submitted a contribution! The plant data will be checked by the administrators and changes will
        be made to the database accordingly. Thank you for contributing!</string>

    <string name="label_contribute_success_desc2">You have successfully submitted a contribution! The plant data will be checked by the administrators and changes will
        be made to the database accordingly. Thank you for contributing!</string>

    <string name="update_notice">
        The version of PlantDex that you have installed does not match the version supported by the server. Please update or downgrade the app to the version
        supported by the server. Different releases of the app can be found in github => (https://github.com/thisiszammy/PlantDexApp/releases)
    </string>
</resources>
