<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDim"
    tools:context=".LoginActivity"
    android:id="@+id/rootLayout">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/brandContainer"
        android:padding="28dp">

        <ImageView

            android:id="@+id/appLogo"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:src="@drawable/ic_logo_login"
            android:layout_centerHorizontal="true"
            />

        <TextView
            android:id="@+id/appTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/appLogo"
            android:layout_centerInParent="true"
            android:fontFamily="@font/noto_sans_bold"
            android:text="@string/app_name"
            android:textColor="@color/colorAccent"
            android:textSize="36sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/brandContainer">


        <TextView
            android:id="@+id/lblUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_username"
            android:textColor="@color/colorAccent"
            android:fontFamily="@font/roboto_regular"
            android:layout_alignStart="@id/txtUsername"
            android:layout_alignLeft="@id/txtUsername"
            />
        
        <EditText
            android:layout_below="@id/lblUsername"
            android:id="@+id/txtUsername"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_input"
            android:hint="@string/hint_username"
            android:padding="8dp"
            android:textColorHint="@color/colorAccentDim"
            android:layout_centerHorizontal="true"
            android:inputType="textPersonName"
            android:layout_marginBottom="4dp"
            android:fontFamily="@font/noto_sans_bold"
            />

        <TextView
            android:id="@+id/lblPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_password"
            android:layout_marginTop="4dp"
            android:layout_below="@id/txtUsername"
            android:textColor="@color/colorAccent"
            android:fontFamily="@font/roboto_regular"
            android:layout_alignStart="@id/txtUsername"
            android:layout_alignLeft="@id/txtUsername"
            />

        <EditText
            android:layout_below="@id/lblPassword"
            android:id="@+id/txtPassword"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_input"
            android:hint="@string/hint_password"
            android:padding="8dp"
            android:fontFamily="@font/noto_sans_bold"
            android:textColorHint="@color/colorAccentDim"
            android:layout_centerHorizontal="true"
            android:inputType="textPassword"
            android:layout_marginBottom="8dp"
            />

        <RelativeLayout
            android:layout_width="200dp"
            android:layout_height="35dp"
            android:layout_below="@id/txtPassword"
            android:layout_centerHorizontal="true"
            android:background="@color/colorPrimaryLight"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="10dp"
            android:id="@+id/btnLogin"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_key"
                android:layout_centerVertical="true"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@null"
                android:gravity="center"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:text="Login"
                android:id="@+id/btnLogin2"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:fontFamily="@font/noto_sans_bold"
                android:textColor="@android:color/white"
                android:layout_centerInParent="true"
                />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnLogin"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_action_register"
                android:textColor="@color/colorPrimaryDark"
                android:fontFamily="@font/noto_sans_bold"
                android:id="@+id/lblRegisterDesc"
                android:textSize="12sp"
                />

            <TextView
                android:id="@+id/txtSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/noto_sans_bold"
                android:text="@string/label_action"
                android:textColor="@color/colorAccent"
                android:layout_toEndOf="@id/lblRegisterDesc"
                android:layout_toRightOf="@id/lblRegisterDesc"
                android:layout_alignBottom="@id/lblRegisterDesc"
                android:textStyle="italic"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:textSize="12sp"
                />
        </RelativeLayout>



    </RelativeLayout>

    <RelativeLayout
        android:visibility="invisible"
        android:id="@+id/layoutLoading"
        android:background="@color/colorLoadingBg"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminateTint="@color/colorPrimaryDark"
        />

    </RelativeLayout>

</RelativeLayout>