<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContributionSuccessActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:id="@+id/appbar"
        >
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimaryDim"
            app:titleTextColor="@color/colorAccent"
            android:id="@+id/toolBar"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/label_contribute"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/noto_sans_bold"
                    android:layout_marginHorizontal="120dp"
                    />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_question_mark"
                    android:background="@null"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="12dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    />

            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/appbar">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_contribute_save_success"
            android:layout_marginTop="30dp"
            android:id="@+id/btnSuccessSymbol"
            />

        <TextView
            android:layout_below="@id/btnSuccessSymbol"
            android:id="@+id/lblDesc1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_contribute_success_desc1"
            android:textColor="@color/colorBlack"
            android:fontFamily="@font/roboto_regular"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="10dp"
            />


        <TextView
            android:layout_below="@id/lblDesc1"
            android:id="@+id/lblDesc2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_contribute_success_desc2"
            android:textColor="@color/colorBlack"
            android:fontFamily="@font/roboto_regular"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="10dp"
            />

        <RelativeLayout
            android:layout_below="@id/lblDesc2"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_centerHorizontal="true"
            android:background="@color/colorPrimaryDim"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="50dp"
            android:id="@+id/btnHome"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_home"
                android:layout_centerVertical="true"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@null"
                android:gravity="center"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:text="Home  "
                android:textAllCaps="false"
                android:textSize="18sp"
                android:fontFamily="@font/noto_sans_bold"
                android:textColor="@android:color/white"
                android:layout_centerInParent="true"
                />


        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>